# DPC_2024

./: .gitignore  README.md  config.yaml  ids.json  leeme.txt  pyproject.toml  pyproject.toml.poetry_ini  pyproject.toml.setuptools  requirements.txt
docs/: conf.py  docutils.conf  find_activity.rst  find_activityall.rst  find_gait.rst  find_mscodeids.rst  index.rst  modules.rst  msCodeID.rst  msGait.rst  msTools.rst  usage.rst
locales/en/LC_MESSAGES/: msGait.mo  msGait.po
locales/es/LC_MESSAGES/: msGait.mo  msGait.po
msCodeID/: README.md  __init__.py  codeid_processor.py
msGait/: README.md  __init__.py  gait_classifier.py  models.py  movement_detector.old  movement_detector.py  trajectory_analyzer.py
msTools/: README.md  __init__.py  create_tables.sql  data_manager.py  i18n.py  models.py  timeutils.py
ms_monitoring/: README.md  find_activity.py  find_activityall.py  find_gait.py  find_mscodeids.py
